# rgb-lightning-node

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yml  openapi.yaml  package.json  regtest.sh  rust-toolchain.toml
.github/workflows/: build.yaml  format.yaml  lint.yaml  pages.yaml  rust.yaml  test.yaml
examples/: README.md  asset_lifecycle.sh  backup_restore.sh  cli_demo.sh  failed_payment.sh  force_close_channel.sh  high_fee_refusal.sh  keysend.sh  lib.sh  message_signing.sh  multi_asset_channel.sh  multihop_payment_btc.sh  multihop_payment_rgb.sh  onion_messaging.sh  simple_rgb_channel.sh  swap_btc_for_rgb.sh  swap_rgb_for_btc.sh  swap_rgb_for_rgb.sh  vanilla_channel.sh
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250127_000001_init_db.rs  main.rs
src/: args.rs  auth.rs  backup.rs  bdk.rs  bitcoind.rs  cli.rs  disk.rs  error.rs  indexer.rs  kv_store.rs  ldk.rs  main.rs  proxy.rs  rgb.rs  routes.rs  runtime.rs  swap.rs  utils.rs
src/database/: mod.rs
src/database/entities/: channel_peer.rs  config.rs  kv_store.rs  mnemonic.rs  mod.rs  revoked_token.rs
src/test/: asset_id_hex_bytes.rs  authentication.rs  backup_and_restore.rs  channel_closed_lock_release.rs  cli_integration.rs  close_coop.rs  close_coop_nobtc_acceptor.rs  close_coop_other_side.rs  close_coop_standard.rs  close_coop_vanilla.rs  close_coop_zero_balance.rs  close_force.rs  close_force_nobtc_acceptor.rs  close_force_other_side.rs  close_force_standard.rs  concurrent_btc_payments.rs  concurrent_openchannel.rs  drop_funding_signed.rs  encode_decode_asset_id.rs  fail_transfers.rs  getchannelid.rs  hodl_invoice.rs  htlc_amount_checks.rs  inflate.rs  init.rs  invoice.rs  issue.rs  lock_unlock.rs  lock_unlock_changepassword.rs  missing_acceptor.rs  mod.rs  multi_hop.rs  multi_open_close.rs  node_state_test.rs  open_after_double_send.rs  openchannel_fail.rs  openchannel_no_indexer.rs  openchannel_optional_addr.rs  openchannel_push_asset_amount.rs  payment.rs  (+25 more)
