[package]
name = "rgb-lightning-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[[bin]]
name = "rgb-lightning-node"

[dependencies]
amplify = { version = "=4.6.0", default-features = false }
anyhow = "1.0.72"
axum = "0.6.19"
axum-extra = "0.7.5"
# axum-macros = "0.3.8"  # uncomment to use debug_handler
baid58 = "0.4.4"
base64 = "0.13.0"
bech32 = "0.8"
bitcoin = "0.30.2"
bitcoin-bech32 = "0.12"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = "4.3.19"
dirs = "5.0.1"
futures = "0.3"
hex = { package = "hex-conservative", version = "0.1.1", default-features = false }
hyper = "0.14.27"
libc = "0.2"
lightning = { version = "0.0.123", features = ["max_level_trace"], path = "./rust-lightning/lightning" }
lightning-background-processor = { version = "0.0.123", features = ["futures"], path = "./rust-lightning/lightning-background-processor" }
lightning-block-sync = { version = "0.0.123", features = ["rpc-client", "tokio"] }
lightning-invoice = { version = "0.31.0", path = "./rust-lightning/lightning-invoice" }
lightning-net-tokio = { version = "0.0.123" }
lightning-persister = { version = "0.0.123", path = "./rust-lightning/lightning-persister" }
lightning-rapid-gossip-sync = { version = "0.0.123", path = "./rust-lightning/lightning-rapid-gossip-sync" }
magic-crypt = "3.1.12"
miniscript = { version = "8.0", features = ["serde"] }
rand = "0.8.5"
rgb-lib = { version = "0.3.0-alpha.4", features = [
    "electrum",
    "esplora",
] }
scrypt = "0.11.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
thiserror = "1.0"
time = { version = "0.3.20", features = ["std"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "sync", "net", "time"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typenum = "1.16.0"
walkdir = "2.3.3"
zip = { version = "0.6.6", default-features = false, features = ["time", "zstd"] }

[dev-dependencies]
dircmp = "0.2.0"
electrum-client = "0.19.0"
mime = "0.3.17"
once_cell = "1.17.1"
regex = "1.9.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
serial_test = "2.0.0"
tower = "0.4.13"
tracing-test = "0.2.4"

[patch.crates-io]
lightning = { path = "./rust-lightning/lightning" }
lightning-background-processor = { path = "./rust-lightning/lightning-background-processor"}
