[package]
name = "rgb-lightning-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[[bin]]
name = "rgb-lightning-node"

[dependencies]
amplify = { version = "=4.6.0", default-features = false }
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = "0.9.3"
# axum-macros = "0.4.1"  # uncomment to use debug_handler
baid58 = "0.4.4"
base64 = "0.22.1"
bitcoin = "0.30.2"
bitcoin-bech32 = "0.13"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = "4.5.10"
dirs = "5.0.1"
futures = "0.3"
hex = { package = "hex-conservative", version = "0.2.1", default-features = false }
lightning = { version = "0.0.123", features = ["max_level_trace"], path = "./rust-lightning/lightning" }
lightning-background-processor = { version = "0.0.123", features = ["futures"], path = "./rust-lightning/lightning-background-processor" }
lightning-block-sync = { version = "0.0.123", features = ["rpc-client", "tokio"] }
lightning-invoice = { version = "0.31.0", path = "./rust-lightning/lightning-invoice" }
lightning-net-tokio = { version = "0.0.123" }
lightning-persister = { version = "0.0.123", path = "./rust-lightning/lightning-persister" }
lightning-rapid-gossip-sync = { version = "0.0.123", path = "./rust-lightning/lightning-rapid-gossip-sync" }
magic-crypt = "3.1.13"
rand = "0.8.5"
rgb-lib = { version = "0.3.0-alpha.4", features = [
    "electrum",
    "esplora",
] }
scrypt = "0.11.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
thiserror = "1.0"
time = { version = "0.3.36", features = ["std"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "signal", "sync", "net", "time"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typenum = "1.17.0"
walkdir = "2.5.0"
zip = { version = "2.1.5", default-features = false, features = ["time", "zstd"] }

[dev-dependencies]
dircmp = "0.2.0"
electrum-client = "0.20.0"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
serial_test = "3.1.1"
tracing-test = "0.2.5"

[patch.crates-io]
lightning = { path = "./rust-lightning/lightning" }
lightning-background-processor = { path = "./rust-lightning/lightning-background-processor"}
